<resources>
    <string name="app_name">BMRCalculator</string>
    <string name="cal">Today Calories</string>
    <string name="total_cal">-</string>
    <string name="height_text">Height</string>
    <string name="weight_text">Weight</string>
    <string name="bmr_text">Bmr</string>
    <string name="bmr">-</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="cal_btn">Calculate BMR</string>
    <string name="age_text">Age</string>
    <string name="workout_text">workout frequency</string>
    <string name="frequency_none">None</string>
    <string name="frequency_low">1-3 days/week</string>
    <string name="frequency_medium">3-5 days/week</string>
    <string name="frequency_high">6-7 days/week</string>
    <string name="frequency_highest">Pro Athelete</string>
    <string name="gender_text">Gender</string>
    <string name="food">Name</string>
    <string name="inputfood">Enter your Food name</string>
    <string name="protein">protein</string>
    <string name="inputprotein">Enter your Protein</string>
    <string name="cals">Calories</string>
    <string name="inputcal">Enter your Calories</string>
    <string name="carb">Carb</string>
    <string name="inputcarb">Enter your Carb</string>
    <string name="fat">Fat</string>
    <string name="inputfat">Enter your Fat</string>
    <string name="savefood">Save</string>
</resources>