<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Addfood">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.01"
                android:background="#2195F2"
                android:padding="10dp"
                android:text="Go back"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/colorforinfo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:background="#2195F2"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:background="#2195F2"
                android:padding="10dp"
                android:text="TIP!"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView

            android:id="@+id/colorforinfo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:background="#2195F2"
            android:gravity="center"
            android:padding="5sp"
            android:text="Add your food"
            android:textAlignment="gravity"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_gallery" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food" />

        <EditText
            android:id="@+id/InputFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputfood"
            android:inputType="text" />

        <TextView
            android:id="@+id/CAl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cals" />

        <EditText
            android:id="@+id/InputCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputcal"
            android:inputType="text" />

        <TextView
            android:id="@+id/Protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/protein" />

        <EditText
            android:id="@+id/InputProtein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputprotein"
            android:inputType="text" />

        <TextView
            android:id="@+id/Flour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carb" />

        <EditText
            android:id="@+id/InputFlour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputcarb"
            android:inputType="text" />

        <TextView
            android:id="@+id/Fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fat" />

        <EditText
            android:id="@+id/Inputfat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputfat"
            android:inputType="text" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:text="@string/savefood" />

    </LinearLayout>

</LinearLayout>